src/test/ui/span/range-2.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/range-2.rs:20:5
   |
17 |         &a..&b
   |          - borrow occurs here
...
20 |     };
   |     ^ `a` dropped here while still borrowed
21 | }
   | - borrowed value needs to live until here

error[E0597]: `b` does not live long enough
  --> $DIR/range-2.rs:20:5
   |
17 |         &a..&b
   |              - borrow occurs here
...
20 |     };
   |     ^ `b` dropped here while still borrowed
21 | }
   | - borrowed value needs to live until here

error: aborting due to previous error(s)

